# Booking_system

./: .gitignore  pyproject.toml  railway.toml  requirements.txt  verify_pms.py
app/: main.py
app/config/: database_config.py
app/core/: auth.py
app/models/: users_model.py
app/modules/auth/: auth_middlewares.py  dependencies.py
app/modules/auth/models/: __init__.py  guests_model.py  tenants_model.py  users_model.py
app/modules/auth/repositories/: guests_repo.py  users_repo.py
app/modules/auth/routers/: guests_router.py  users_router.py
app/modules/auth/schemas/: guests_schema.py  token_schema.py  users_schema.py
app/modules/auth/services/: guests_services.py  mail_services.py  otp_service.py  users_services.py
app/modules/booking/models/: __init__.py  booking_model.py  folio_models.py
app/modules/pms/: dependencies.py
app/modules/pms/models/: __init__.py  discount_code_model.py  nested_mutable.py  offers_model.py  properties_model.py  rooms_model.py  tenants_model.py
app/modules/pms/repositories/: discount_code_repo.py  offers_repo.py  properties_repo.py  room_repo.py  room_units_repo.py  tenants_repo.py
app/modules/pms/routers/: discount_code_router.py  image_routers.py  offers_routers.py  properties_routers.py  (+3 more)
app/repository/: users_repo.py
app/routers/: user_router.py
app/schemas/: users_schema.py
app/services/: user_service.py
app/utils/: dependencies.py  exception_handlers.py  exceptions.py  imgae_utils.py  schemas.py  validation.py
tests/: test_cleanup.py
tests/modules/auth/: test_guests_router.py  test_users_router.py
(+16 files in other folders)
